cmake_minimum_required(VERSION 3.10)
project(StopWait)

SET(CMAKE_C_COMPTLER GCC)
set(CMAKE_CXX FLAGS -fexec-charset=GBK)
add_definitions(-std=c++11)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/include/GBN ${PROJECT_SOURCE_DIR}/include/SR ${PROJECT_SOURCE_DIR}/include/TCP)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/GBN GBN_DIR)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/SR SR_DIR)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/TCP TCP_DIR)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_EXECUTABLE(stop_wait ${SRC_LIST})
ADD_EXECUTABLE(GBN ${GBN_DIR})
ADD_EXECUTABLE(SR ${SR_DIR})
ADD_EXECUTABLE(TCP ${TCP_DIR})

FIND_LIBRARY(NETSIM_LIB libnetsim.a ${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(stop_wait  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(GBN  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(SR  ${NETSIM_LIB})
TARGET_LINK_LIBRARIES(TCP ${NETSIM_LIB})